--- a/app/src/main/res/layout/activity_cam.xml
+++ b/app/src/main/res/layout/activity_cam.xml
@@ -5,21 +5,108 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:forceDarkAllowed="true"
-    tools:context=".MainActivity"
+    tools:context=".CamActivity"
     tools:ignore="HardcodedText">
 
-    <!--ImageView to preview the selected image-->
-    <ImageView
-        android:id="@+id/IVPreviewImage"
+    <ImageButton
+        android:id="@+id/IBBack"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:contentDescription="Button to return to main screen."
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
+        android:padding="16dp"
+        android:background="@android:color/transparent"
+        android:clickable="true"
+        android:src="@drawable/baseline_arrow_back_32" />
+    <ImageButton
+        android:id="@+id/IBReset"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginEnd="16dp"
+        android:layout_marginTop="16dp"
+        android:contentDescription="Button to reset the image Selection."
+        android:padding="16dp"
+        android:background="@android:color/transparent"
+        android:clickable="true"
+        android:src="@drawable/baseline_refresh_32" />
+
+    <TextView
+        android:id="@+id/TVInstructions"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/IBBack"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="16dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
+        android:text="Enter puzzle dimensions and crop image to puzzle frame."
+        android:textSize="24sp" />
+
+    <LinearLayout
+        android:id="@+id/LLDimensions"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/TVInstructions"
+        android:layout_marginTop="16dp"
+        android:orientation="horizontal"
+        android:paddingStart="16dp"
+        android:paddingEnd="16dp">
+
+        <EditText
+            android:id="@+id/ETRows"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:layout_marginEnd="8dp"
+            android:autofillHints="Rows"
+            android:hint="Rows"
+            android:inputType="number"
+            android:textSize="18sp" />
+
+        <EditText
+            android:id="@+id/ETColumns"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:layout_marginStart="8dp"
+            android:autofillHints="Columns"
+            android:hint="Columns"
+            android:inputType="number"
+            android:textSize="18sp" />
+    </LinearLayout>
+
+    <!--ImageView to preview the selected image-->
+    <RelativeLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_above="@id/BSendImage"
+        android:layout_below="@id/LLDimensions"
         android:layout_centerHorizontal="true"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
-        android:layout_marginBottom="16dp" />
+        android:layout_marginBottom="16dp">
 
+        <ImageView
+            android:id="@+id/IVPreviewImage"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_centerInParent="true"
+            android:layout_centerHorizontal="true"
+            android:contentDescription="Selected image"/>
+
+        <com.example.crossle.ShapeOverlayView
+            android:id="@+id/shapeOverlayView"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_centerInParent="true"
+            android:layout_centerHorizontal="true"/>
+    </RelativeLayout>
     <!--Button to open the image selector-->
     <Button
         android:id="@+id/BSendImage"
@@ -31,6 +118,6 @@
         android:text="ANALYZE IMAGE"
         android:textColor="@android:color/white"
         android:textSize="18sp"
-        android:visibility="gone" />
+        android:visibility="visible" />
 
 </RelativeLayout>
