--- a/app/src/main/res/layout/activity_work.xml
+++ b/app/src/main/res/layout/activity_work.xml
@@ -32,6 +32,18 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textViewPuzzle" />
 
+    <LinearLayout
+        android:id="@+id/linearLayoutSolution"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/progressBarPuzzle" />
+
     <ScrollView
         android:id="@+id/scrollViewPuzzle"
         android:layout_width="0dp"
